Fix margin for logo on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -125,6 +125,9 @@ footer i {
   .hero-text h2 {
     font-size: 20px;
   }
+  .logo {
+    margin: 8px;
+  }
   .portfolio-section .row {
     display: flex;
     flex-direction: column;
